fix:framer verson

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^12.0.0-alpha.0",
     "react": "^18.3.1",
     "react-chart.js": "^1.0.0",
     "react-chartjs-2": "^5.2.0",
